# Crush

./: LICENSE  README.md  TODO.md  crush.cabal  lambda.cabal  lambda1.cabal  stack.yaml
app/: Main.hs
examples/: 1+1.lam  2x2.lam  42.lam  Cooked.hs  Example.hs  Omega.lam  StdLib.Logic.lam  StdLib.lam  cooked.lam  cookedSingleExpr.lam  testLib.lam
exec/: Main.hs
src/: Lambda.hs  LambdaInternal.hs  LambdaLib.hs
src/Lambda/: Class.hs  Evaluation.hs  LambdaLib.hs  Named.hs  Nameless.hs  Translation.hs
src/Lambda/Named/: Parser.hs
src/Language/Lambda/Semantics/Named/: BigStep.hs  Eval.hs  Internal.hs  SmallStep.hs
src/Language/Lambda/Semantics/Nameless/: BigStep.hs  Eval.hs  Internal.hs  SmallStep.hs
src/Language/Lambda/Syntax/: Translation.hs
src/Language/Lambda/Syntax/Named/: Exp.hs  Parser.hs  Pretty.hs  Testdata.hs
src/Language/Lambda/Syntax/Nameless/: Exp.hs  Testdata.hs
test/: Spec.hs  Testsuite.hs
test/Language/Lambda/Semantics/Named/BigStep/: Tests.hs
test/Language/Lambda/Semantics/Named/SmallStep/: Tests.hs
