name:                lambda
version:             0.1.0.0
synopsis:            Interpreter for the untyped lambda calculus
description:         Please see README.md
homepage:            http://github.com/julmue/lambda1#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          jul.mue@hotmail.de
copyright:           2016 Julian Müller
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lambda
                     , Lambda
  other-modules:       Lambda.Named
                     , Lambda.Nameless
                     , Lambda.Evaluation
                     , Lambda.Translation
                     , Lambda.LambdaLib
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , bound
                     , prelude-extras
                     , mtl
                     , monad-gen
                     , bound-gen
  default-language:    Haskell2010

executable lambda
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda
  default-language:    Haskell2010

test-suite lambda1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambda
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/julmue/LambdaInterpreter1
