name:                lambda
version:             0.1.0.0
synopsis:            Interpreter for the untyped lambda calculus
description:         Please see README.md
homepage:            http://github.com/julmue/lambda1#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          jul.mue@hotmail.de
copyright:           2016 Julian Müller
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Lambda.Syntax.Named.Exp
                     , Language.Lambda.Syntax.Named.Parser
                     , Language.Lambda.Syntax.Named.Pretty
                     , Language.Lambda.Syntax.Named.Testdata
                     , Language.Lambda.Syntax.Nameless.Exp
                     , Language.Lambda.Syntax.Nameless.Testdata
                     , Language.Lambda.Semantics.Named.BigStep
                     , Language.Lambda.Semantics.Named.SmallStep
                     , Language.Lambda.Semantics.Nameless.BigStep
                     , Language.Lambda.Semantics.Nameless.SmallStep
                     , Bound.Unwrap
  other-modules:       Language.Lambda.Semantics.Named.Internal
                     , Language.Lambda.Semantics.Nameless.Internal
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , smallcheck
                     , bound
                     , prelude-extras
                     , mtl
                     , monad-gen
                     -- , bound-gen
                     , parsec
                     , pretty
  default-language:    Haskell2010

executable lambda
  hs-source-dirs:      exec
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda
                     , mtl
  default-language:    Haskell2010

test-suite lambda-testdata
  type:                  exitcode-stdio-1.0
  hs-source-dirs:        test
  main-is:               Testsuite.hs
  other-modules:         Language.Lambda.Semantics.Named.BigStep.Tests
  build-depends:         base
                       , lambda
                       , QuickCheck
                       , smallcheck
                       , tasty
                       , tasty-hunit
                       , tasty-quickcheck
                       , tasty-smallcheck
  ghc-options:           -threaded
                         -rtsopts -with-rtsopts=-N
  default-language:      Haskell2010

test-suite example
  type:                   exitcode-stdio-1.0
  main-is:                Example.hs
  hs-source-dirs:         examples
  ghc-options:            -Wall
                          -threaded
  build-depends:          base
                        , lambda
  default-language:       Haskell2010

test-suite example-cooked
  type:                   exitcode-stdio-1.0
  main-is:                Cooked.hs
  hs-source-dirs:         examples
  ghc-options:            -Wall
                          -threaded
  build-depends:          base
                        , lambda
  default-language:       Haskell2010

source-repository head
  type:     git
  location: https://github.com/julmue/LambdaInterpreter1
